<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/minifluxDarkBackground"
    tools:context=".activities.configuration.ConfigurationActivity">

    <LinearLayout
        android:id="@+id/configurationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:visibility="visible">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchUrlMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/chip_mode" />

        <TextView
            android:id="@+id/textViewModeInfo"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:ems="10"
            android:maxLines="2"
            android:minHeight="48dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/mode_info"
            android:textColor="@color/buttonReset"
            android:visibility="gone" />

        <EditText
            android:id="@+id/textUrl"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimary"
            android:clipToOutline="true"
            android:ems="10"
            android:hint="@string/url"
            android:inputType="textUri|text"
            android:minHeight="48dp"
            android:outlineProvider="bounds"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorHint"
            android:visibility="visible" />

        <EditText
            android:id="@+id/textLocalUrl"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimary"
            android:clipToOutline="true"
            android:ems="10"
            android:hint="@string/local_url"
            android:inputType="textUri|text"
            android:minHeight="48dp"
            android:outlineProvider="bounds"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorHint"
            android:visibility="gone" />

        <EditText
            android:id="@+id/textExternalUrl"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimary"
            android:clipToOutline="true"
            android:ems="10"
            android:hint="@string/external_url"
            android:inputType="textUri|text"
            android:minHeight="48dp"
            android:outlineProvider="bounds"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorHint"
            android:visibility="gone" />

        <EditText
            android:id="@+id/textAccessToken"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimary"
            android:clipToOutline="true"
            android:ems="10"
            android:hint="@string/access_token"
            android:inputType="textUri|text"
            android:minHeight="48dp"
            android:outlineProvider="bounds"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorHint"
            android:visibility="visible" />

        <CheckBox
            android:id="@+id/checkBypassHTTPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorAccent"
            android:minHeight="48dp"
            android:text="@string/bypass_https_errors"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorHint" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/buttonSave"
            app:layout_constraintTop_toBottomOf="@+id/buttonSave">

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:backgroundTint="@color/buttonBackground"
                android:text="@string/save_urls"
                android:textColor="@color/buttonText"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:backgroundTint="@color/buttonReset"
                android:text="@string/reset_settings"
                android:textColor="@color/buttonText"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</FrameLayout>