<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreenActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/minifluxDarkBackground"
    tools:context=".activities.main.MainActivity">

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/settings_button"
        android:contentDescription="@string/settings"
        android:gravity="center|center_horizontal"
        android:textColor="@color/buttonText"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:gravity="center|center_horizontal"
        android:text="@string/back"
        android:textColor="@color/buttonText"
        android:visibility="gone" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/webViewSwipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/minifluxDarkBackground"
        android:visibility="gone">

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/minifluxDarkBackground"
            android:overScrollMode="never">

        </WebView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/logoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/minifluxDarkBackground"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:scaleX="1"
            android:scaleY="1"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />


    </LinearLayout>

</FrameLayout>
